--- a/index.html
+++ b/index.html
@@ -13,22 +13,7 @@
         </style>
     </head>
     <body>
-        <header class="w3-top">
-            <nav class="w3-topnav w3-black">
-                <img src="./images/godigio_transparent.png" alt="logo" height="40px"/>
-                <a href="#">Home</a>
-                <a href="#">Post</a>
-                <span><a href="#" onclick="btnSearch();">Search </a><input id="search" style="color: #000000"/></span>
-                <button id="btnFanToggle" class="w3-btn w3-black" style="display: none"></button>
-                <span class="w3-right"><a href="#" id="btnLoginLogout">Logout</a></span>
-                <span class="w3-right" id="btnEditProfile" style="display: none">
-                    <a href="editprofile.html" class="w3-btn">Edit Profile</a>
-                </span>
-            </nav>            
-        </header>
-        <br/><br/>
-        <div id="lstSearch" class="w3-row-padding">                        
-        </div>
+        <div id="navbar"></div>
         <div id="divProfile" class="w3-container center" 
             style="background-image: url('./images/banner-icon.png'); background-repeat: no-repeat">           
             <div class="w3-row w3-container" id="icon">
@@ -209,6 +194,7 @@
         <script type="text/javascript" src="./js/json2form.js"></script>                
         <script type="text/javascript" src="./js/fileupload.js"></script>
         <script type="text/javascript" src="./js/es6-promise.min.js"></script>
+        <script type="text/javascript" src="navbar.js"></script>                  
         <script type="text/javascript" src="index.js"></script>                  
         <script type="text/javascript" src="search.js"></script>                  
     </body>
