--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@ To change this template use Tools | Templates.
     <head>
         <title></title>
         <link rel="stylesheet" href="./css/w3.css"/>
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">   
     </head>
     <body>
         <br/><br/>
