fixed issues identified by Alexis

--- a/editprofile.html
+++ b/editprofile.html
@@ -17,15 +17,7 @@ To change this template use Tools | Templates.
     </head>
     <body>
         <br/><br/>
-        <header class="w3-top">
-            <nav class="w3-topnav w3-black">
-                <a href="#">Home</a>
-                <a href="#">Post</a>
-                <a href="#" id="fantoggle">Fan</a>
-                <span>Search <input style="color: #000000"/></span>
-            </nav>            
-        </header>
-        <img src="./images/newgodigiologo.png" alt="Godigio Logo" width="100px"/>
+        <div id="navbar"></div>
         <div class="w3-form w3-third" id="frmProfile">
             <div class="w3-group">      
                 <input class="w3-input requried" name="name" id="name" style="width:100%;" type="text">
@@ -61,6 +53,7 @@ To change this template use Tools | Templates.
         <script type="text/javascript" src="./js/fileupload.js"></script>
         <script type="text/javascript" src="./js/uploadfilefromform.js"></script>
         <script type="text/javascript" src="./js/es6-promise.min.js"></script>
-        <script type="text/javascript" src="./controllers/controllers.js"></script>        
+        <script type="text/javascript" src="./controllers/controllers.js"></script>     
+        <script type="text/javascript" src="./navbar.js"></script>           
     </body>
 </html>
