--- a/navbar.html
+++ b/navbar.html
@@ -3,16 +3,32 @@
                 <a href="./welcome.html"><img src="./images/godigio_transparent.png" alt="logo" height="40px"/></a>
                 <span><a href="#" onclick="btnSearch();">Search </a><input id="search" style="color: #000000"/></span>
                 <button id="btnFanToggle" class="w3-btn w3-black" style="display: none"></button>
+                <span class="w3-dropdown-hover">
+                    <a href="#">Services</a>
+                    <span class="w3-dropdown-content w3-card-4">
+                        <a href="#">Radio Airplay</a>
+                        <a href="#">Distribution</a>
+                        <a href="#">Production and Mastering</a>
+                        <a href="#">Event Management</a>
+                    </span>
+                </span>
                 <span class="w3-right w3-dropdown-hover">
                     <a href="#"><i class="fa fa-user"></i> Account</a>
-                        <span class="w3-dropdown-content w3-card-4">
-                            <a href="#" onclick="btnLoginLogout();" id="btnLoginLogout">Login</a>
-                            <a href="#" id="btnViewProfile" style="display: none">View Profile</a>
-                            <a href="./register.html" id="btnRegister">Register</a>
-                        </span>
-                    </a>
+                    <span class="w3-dropdown-content w3-card-4">
+                        <a href="#" onclick="btnLoginLogout();" id="btnLoginLogout">Login</a>
+                        <a href="#" id="btnViewProfile" style="display: none">View Profile</a>
+                        <a href="./editprofile.html" id="btnEditProfile" style="display: none">Edit Profile</a>
+                        <a href="./register.html" id="btnRegister">Register</a>
+                    </span>
                 </span>                
+                <div id="lstSearch" class="w3-row-padding"></div>
             </nav>            
-            <br/><br/>
-            <div id="lstSearch" class="w3-row-padding"></div>
+            <br/><br/>            
         </header>        
+        <div id="tmplUser" class="w3-col m2 s3" style="display:none; margin:  10px">
+            <a href="">
+                <img id="userimage" src="./images/100x100.jpg" 
+                    alt="fanof profile image" width="110" height="90"/>
+            </a>
+            <div id="name"></div>
+        </div>
