changes to index.html

--- a/welcome.html
+++ b/welcome.html
@@ -27,6 +27,6 @@ To change this template use Tools | Templates.
         <script type="text/javascript" src="./js/formcontrols.js"></script>
         <script type="text/javascript" src="./js/json2form.js"></script>   
         <script type="text/javascript" src="./controllers/controllers.js"></script>       
-        <script src="navbar.js"></script>
+        <script type="text/javascript" src="./navbar.js"></script>
     </body>
 </html>
