--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <script type="text/javascript" src="./js/json2form.js"></script>                
         <script type="text/javascript" src="./js/fileupload.js"></script>
         <script type="text/javascript" src="./js/es6-promise.min.js"></script>
-        <script type="text/javascript" src="navbar.js"></script>                  
-        <script type="text/javascript" src="index.js"></script>                          
+        <script type="text/javascript" src="./navbar.js"></script>                  
+        <script type="text/javascript" src="./index.js"></script>                          
     </body>
 </html>
