--- a/navbar.html
+++ b/navbar.html
@@ -27,7 +27,7 @@
         </header>        
         <div id="tmplUser" class="w3-col m2 s3" style="display:none; margin:  10px">
             <a href="">
-                <img id="userimage" src="./images/100x100.jpg" 
+                <img id="searchimage" src="./images/100x100.jpg" 
                     alt="fanof profile image" width="110" height="90"/>
             </a>
             <div id="name"></div>
