New look to welcome page

--- a/editprofile.html
+++ b/editprofile.html
@@ -47,11 +47,11 @@ To change this template use Tools | Templates.
             </div>
             <div class="w3-group">      
                 <input class="w3-input requried" name="genres" id="genres" style="width:100%;" type="text">
-                <label class="w3-label">Genres - separate with ';'</label>
+                <label class="w3-label">Genres - separate with space.  Use _ for compound genres like hip_hop or r_&_b.</label>
             </div>
             <div class="w3-group">      
                 <input class="w3-input requried" name="interests" id="interests" style="width:100%;" type="text">
-                <label class="w3-label">Interests - separate with ';'</label>
+                <label class="w3-label">Interests - separate with space.  Use _ for compound interests like rock_climbing.</label>
             </div>
             <input class="w3-input" type="hidden" name="id" id="id"/>
             <button type="button" id="btnSubmit" class="w3-btn w3-right w3-theme">Submit</button>
