--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
                     <div class="w3-card w3-row" id="tmplPost" style="display: none">
                         <div class="w3-two-thirds">
-                            <div id="text">
+                            <div id="text" style="word-wrap: break-word">
                                 This is my first message
                             </div>
                             <div>
