--- a/welcome.html
+++ b/welcome.html
@@ -89,7 +89,7 @@ To change this template use Tools | Templates.
                 </div>
                 <div id="tmplPhoto" style="display: none">
                     <img id="image" src="./images/100x100.jpg" alt="photo" width="100%"/>
-                    <div id="text"></div>
+                    <div id="text" style="height:  1.5em; width: 100%; overflow: hidden"></div>
                 </div>
             </div>
             <div class="w3-third w3-container w3-card-2">
@@ -108,7 +108,7 @@ To change this template use Tools | Templates.
         </div>
         <div class="w3-card w3-row" id="tmplPost" style="display: none">
             <div class="w3-two-thirds">
-                <div id="text">
+                <div id="text" style="word-wrap: break-word">
                     This is my first message
                 </div>
                 <div>
