Component library added

--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,7 @@
             <nav class="w3-topnav w3-black">
                 <a href="./welcome.html"><img src="./images/godigio_transparent.png" alt="logo" height="40px"/></a>
                 <span><a href="#" onclick="btnSearch();">Search </a><input id="search" style="color: #000000"/></span>
-                <button id="btnFanToggle" class="w3-btn w3-black" style="display: none"></button>
+                <button id="btnFanToggle" class="w3-btn w3-black" onclick="btnFanToggle();"style="display: none"></button>
                 <span class="w3-dropdown-hover">
                     <a href="#">Services</a>
                     <span class="w3-dropdown-content w3-card-4">
