--- a/index.html
+++ b/index.html
@@ -125,35 +125,7 @@
                     </div>                   
                     <div id="lstBlogs" class="w3-container">
                     </div>
-                    <div class="w3-card w3-row" id="tmplPost" style="display: none">
-                        <div class="w3-two-thirds">
-                            <div id="text" style="word-wrap: break-word">
-                                This is my first message
-                            </div>
-                            <div>
-                                <img id="image" src="./images/100x100.jpg" alt="post image" style="max-width:90%; display: none"/>
-                            </div>
-                            <div>
-                                <video width="128" height="96" controls style="display:none" id="video">
-                                    <source src="">
-                                </video>
-                            </div>
-                            <div>
-                                <audio controls style="display:none" id="audio">
-                                    <source src="">
-                                </audio>                        
-                            </div>
-                            <div id="tags"></div>
-                            <nav class="w3-topnav">
-                            <a href="#"><i class="fa fa-heart-o btnLikePost"></i></a><span id="likecount">0</span>
-                            <span id="share"><a href="#"><i class="fa fa-retweet btnSharePost"></i></a>
-                                <span id="likecount">0</span>
-                            </span>
-                            <a href="#"><i class="fa fa-comment btnCommentPost"></i></a><span id="commentcount">0</span>
-                            <button><i class="fa fa-trash btnDeletePost"></i></button>
-                            </nav>
-                        </div>
-                    </div>
+                    <div id="postcomponent" style="display: none"></div>                    
                     <button style="width: 100%">All Blogs</button>
                 </div>
 
@@ -203,6 +175,7 @@
         <script type="text/javascript" src="./js/fileupload.js"></script>
         <script type="text/javascript" src="./js/es6-promise.min.js"></script>
         <script type="text/javascript" src="./navbar.js"></script>                  
+        <script type="text/javascript" src="./views/postcomponent.js"></script>
         <script type="text/javascript" src="./index.js"></script>                          
     </body>
 </html>
