updated welcome page

--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./css/font-awesome.min.css">  
     </head>
     <body>
-        <div id="postcomponent" style="display: none"></div>
+        <div id="postcomponent"></div>
         <div id="lstBlogs" class="w3-container">
         </div>
         <div class="w3-row">
