--- a/welcome.html
+++ b/welcome.html
@@ -107,37 +107,9 @@ To change this template use Tools | Templates.
                         <div id="text"></div>
                     </div>
                 </div>
-            </div>
-            <div class="w3-card w3-row" id="tmplPost" style="display: none">
-                <div class="w3-two-thirds">
-                    <div id="text" style="word-wrap: break-word">
-                        This is my first message
-                    </div>
-                    <div>
-                        <img id="image" src="./images/100x100.jpg" alt="post image" style="max-width:90%; display: none"/>
-                    </div>
-                    <div>
-                        <video width="128" height="96" controls style="display:none" id="video">
-                            <source src="">
-                        </video>
-                    </div>
-                    <div>
-                        <audio controls style="display:none" id="audio">
-                            <source src="">
-                        </audio>                        
-                    </div>
-                    <div id="tags"></div>
-                    <nav class="w3-topnav">
-                        <a href="#"><i class="fa fa-heart-o btnLikePost"></i></a><span id="likecount">0</span>
-                        <span id="share"><a href="#"><i class="fa fa-retweet btnSharePost"></i></a>
-                            <span id="likecount">0</span>
-                        </span>
-                        <a href="#"><i class="fa fa-comment btnCommentPost"></i></a><span id="commentcount">0</span>                
-                    </nav>
-                </div>
-            </div>
+            </div>            
         </div>
-        
+        <div id="postcomponent"></div>
         <script type="text/javascript" src="./js/jquery.js"></script>
         <script type="text/javascript" src="./js/formcontrols.js"></script>
         <script type="text/javascript" src="./js/json2form.js"></script>   
