--- a/welcome.html
+++ b/welcome.html
@@ -13,7 +13,7 @@ To change this template use Tools | Templates.
         <div id="navbar"></div>
         <div style="background-image: url('./images/digitaltunnel.jpg')" class="w3-text-white">
         	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-        	            <span class="w3-xlarge" id="msgWelcome" style="display: none">Welcome To Godigio H.U.B. (Helping Users Brand)</span>
+        	            <span class="w3-xlarge w3-blue w3-text-white" id="msgWelcome" style="display: none; opacity: 0.7">Welcome To Godigio H.U.B. (Helping Users Brand)</span>
             <a href="login.html" id="btnLogin" style="display: none"><button class="w3-btn w3-round-xlarge w3-teal w3-border-blue">Login</button></a>
             <a href="register.html" id="btnRegister2" style="display: none">
                 <button class="w3-btn w3-round-xlarge w3-teal w3-border-blue">Register</button>
