Added username to register.html

--- a/register.html
+++ b/register.html
@@ -11,12 +11,12 @@ To change this template use Tools | Templates.
 		  <div id="navbar"></div>
         <div class="w3-form w3-third" id="register_form">
             <div class="w3-group">      
-                <input class="w3-input" name="email" id="email" style="width:100%;" type="text" required="true">
-                <label class="w3-label">Email</label>
-            </div>
-            <div class="w3-group">      
                 <input class="w3-input" name="name" id="name" style="width:100%;" type="text" required="true">
                 <label class="w3-label">Name</label>
+            </div>
+            <div class="w3-group">      
+                <input class="w3-input" name="username" id="username" style="width:100%;" type="text" required="true">
+                <label class="w3-label">Username</label>
             </div>
             <div class="w3-group">      
                 <input class="w3-input" name="password" id="password" style="width:100%;" type="password" required="true">
