--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Godigio Fanhub Beta</title>
         <link rel="stylesheet" href="./css/w3.css"/>
         <link rel="stylesheet" href="./css/fanhub.css"/>
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">   
+        <link rel="stylesheet" href="./css/font-awesome.min.css">   
         <style>
             audio {width: 100%}
             video {width: 100%}
