Added ability to add username if not already set

--- a/editprofile.html
+++ b/editprofile.html
@@ -16,13 +16,17 @@ To change this template use Tools | Templates.
         </script>             
     </head>
     <body>
-        <br/><br/>
-        <div id="navbar"></div>
+        <br/><br/><br/><br/><br/><br/>
+        <div id="navbar"></div>        
         <div class="w3-form w3-third" id="frmProfile">
             <div class="w3-group">      
                 <input class="w3-input requried" name="name" id="name" style="width:100%;" type="text">
                 <label class="w3-label">Name</label>
             </div>
+				<div class="w3-group" style="display:none">      
+                <input class="w3-input requried" name="username" id="username" style="width:100%;" type="text">
+                <label class="w3-label">User Name</label>
+            </div>            
             <div class="w3-group">      
                 <input class="w3-input required" name="dob" id="dob" style="width:100%;" type="date">
                 <label class="w3-label">DOB</label>
