--- a/welcome.html
+++ b/welcome.html
@@ -6,7 +6,7 @@ To change this template use Tools | Templates.
     <head>
         <title></title>
         <link rel="stylesheet" href="./css/w3.css"/>
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">   
+        <link rel="stylesheet" href="./css/font-awesome.min.css">   
         
     </head>
     <body onscroll="scrollFunction()">        
@@ -114,7 +114,8 @@ To change this template use Tools | Templates.
         <div id="postcomponent"></div>
         <script type="text/javascript" src="./js/jquery.js"></script>
         <script type="text/javascript" src="./js/formcontrols.js"></script>
-        <script type="text/javascript" src="./js/json2form.js"></script>   
+        <script type="text/javascript" src="./js/json2form.js"></script>
+        <script type="text/javascript" src="./js/form2json.js"></script>      
         <script type="text/javascript" src="./controllers/controllers.js"></script>       
         <script type="text/javascript" src="./navbar.js"></script>
         <script type="text/javascript" src="./views/postcomponent.js"></script>
