--- a/resetpassword.html
+++ b/resetpassword.html
@@ -8,25 +8,19 @@ To change this template use Tools | Templates.
         <link rel="stylesheet" href="./css/w3.css"/>
     </head>
     <body>
-        <br/><br/>
-        <header class="w3-top">
-            <nav class="w3-topnav w3-black">
-                <a href="#">Home</a>
-                <a href="#">Post</a>
-                <a href="#" id="fantoggle">Fan</a>
-                <span>Search <input style="color: #000000"/></span>
-            </nav>            
-        </header>
-        <img src="./images/newgodigiologo.png" width="100px"/>
+        <div style="background-image: url('./images/digitaltunnel.jpg')" class="w3-text-white">
+        	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        	            <span class="w3-xlarge w3-blue w3-text-white" id="msgWelcome" style="display: none; opacity: 0.7">Welcome To Godigio H.U.B. (Helping Users Brand)</span>
+        </div>            <div id="navbar"></div>        
         <div class="w3-row">
             <div class="w3-form" id="divResetPassword" style="display:none">
                 <div class="w3-group">      
-                    <input class="w3-input" name="password" id="password" style="width:100%;" type="password" required>
+                    <input class="w3-input w3-border" name="password" id="password" style="width:100%;" type="password" onkeyup="chkMatch()" required>
                     <label class="w3-label">New Password</label>
                 </div>      
                 <div class="w3-group">      
-                    <input class="w3-input" name="passwordconfirm" id="passwordconfirm" style="width:100%;" 
-                        type="password" required>
+                    <input class="w3-input w3-border" name="passwordconfirm" id="passwordconfirm" style="width:100%;" 
+                        type="password" required onkeyup="chkMatch()">
                     <label class="w3-label">Confirm New Password</label>
                 </div>      
                 <div class="w3-row">
@@ -51,6 +45,7 @@ To change this template use Tools | Templates.
         <script src="./js/form2json.js"></script>
         <script src="./js/clearForm.js"></script>
         <script src="./controllers/controllers.js"></script>
+        <script src="navbar.js"></script>
         <script src="resetpassword.js"></script>
     </body>
 </html>
