Changed background image for welcome page

--- a/welcome.html
+++ b/welcome.html
@@ -11,7 +11,12 @@ To change this template use Tools | Templates.
     </head>
     <body onscroll="scrollFunction()">        
         <div id="navbar"></div>
-        <div style="background-image: url('./images/digitaltunnel.jpg')" class="w3-text-white">
+        div {
+    background: url(img_flwr.gif);
+    background-size: 80px 60px;
+    background-repeat: no-repeat;
+}
+        <div style="background-image: url('./images/banner.jpg'); background-repeat: no-repeat; margin-top: 100px; background-size: 100% 100%" class="w3-text-white">
         	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
         	            <span class="w3-xlarge w3-blue w3-text-white" id="msgWelcome" style="display: none; opacity: 0.7">Welcome To Godigio H.U.B. (Helping Users Brand)</span>
             <a href="login.html" id="btnLogin" style="display: none"><button class="w3-btn w3-round-xlarge w3-teal w3-border-blue">Login</button></a>
